# montogre

./: .gitignore  PROJECT_SCOPE.md  README.md  pyproject.toml
.github/workflows/: source_simulated_env.yml
source_simulated_env/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
source_simulated_env/project/: config.py
source_simulated_env/project/cli/: cli.py  utils.py
source_simulated_env/project/resources/: actions_db.py  data_generator.py  simulator.py  tasks.py
source_simulated_env/project/seed/: products.json
source_simulated_env/project/tests/: test_data_generator.py
