[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Thiago Serra <thiagosaldanhaserra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.4"
pymongo = "^3.12.0"
tasks = "^2.8.0"
faker = "^19.6.2"
kombu = "^5.3.1"
redis = "^4.3.4"
click = "^8.1.7"
tabulate = "^0.9.0"
termcolor = "^2.3.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pip-audit = "^2.6.1"
pydocstyle = "^6.3.0"
autoflake = "^1.7.8"
taskipy = "^1.12.2"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff . && autoflake --in-place --remove-all-unused-imports --remove-unused-variables -cd -r ."
deep_lint = "flake8 project/"
test = "pytest -s -x --cov=project -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
